<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>smc_l298n_ros_plugin</name>
  <version>1.0.0</version>
  <description>The ros2 hardware interface plugin package for the smc_driver_module</description>

  <maintainer email="smauel.c.agba@gmail.com">Samuel Obiagba</maintainer>

  <author email="smauel.c.agba@gmail.com">Samuel Obiagba</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>libserial-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
